test/units/TypingSpec/valid/prog/let-pat-pair-1.algst
pairId1 : ∀(a:TU) (b:TU). (a, b) -> (a, b)
pairId1 ab =
  let (a, b) = ab in
  (a, b)
