test/units/TypingSpec/invalid/types/let-pat-no-single-con.algst
-- TODO: Don't talk about "case" in the error message.
\(b : Bool) ->
  let True = b in
  ()
